--- a/environments/py-3.10-linux-64.conda.lock.yml
+++ b/environments/py-3.10-linux-64.conda.lock.yml
@@ -4,7 +4,6 @@
 
 channels:
   - conda-forge
-  - nodefaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_kmp_llvm
@@ -19,7 +18,7 @@ dependencies:
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
   - certifi=2024.7.4=pyhd8ed1ab_0
-  - cffi=1.16.0=py310h2fee648_0
+  - cffi=1.17.0=py310h2fdcea3_0
   - click=8.1.7=unix_pyh707e725_0
   - cloudpickle=3.0.0=pyhd8ed1ab_0
   - colorama=0.4.6=pyhd8ed1ab_0
@@ -57,7 +56,7 @@ dependencies:
   - libbrotlienc=1.1.0=hd590300_1
   - libcblas=3.9.0=20_linux64_mkl
   - libcurl=8.9.1=hdb1bdb2_0
-  - libdeflate=1.20=hd590300_0
+  - libdeflate=1.21=h4bc722e_0
   - libdlf=0.2.0=pyhd8ed1ab_0
   - libedit=3.1.20191231=he28a2e2_2
   - libev=4.33=hd590300_2
@@ -75,7 +74,7 @@ dependencies:
   - libsqlite=3.46.0=hde9e2c9_0
   - libssh2=1.11.0=h0841786_0
   - libstdcxx-ng=14.1.0=hc0a3c3a_0
-  - libtiff=4.6.0=h1dd3fc0_3
+  - libtiff=4.6.0=h46a8edc_4
   - libuuid=2.38.1=h0b41bf4_0
   - libwebp-base=1.4.0=hd590300_0
   - libxcb=1.16=hd590300_0
@@ -114,7 +113,7 @@ dependencies:
   - python-tzdata=2023.4=pyhd8ed1ab_0
   - python_abi=3.10=4_cp310
   - pytz=2024.1=pyhd8ed1ab_0
-  - pyyaml=6.0.1=py310h2372a71_1
+  - pyyaml=6.0.2=py310h5b4e0ec_0
   - readline=8.2=h8228510_1
   - scikit-learn=1.4.2=py310h981052a_1
   - scipy=1.14.0=py310h93e2701_1
@@ -127,13 +126,13 @@ dependencies:
   - tk=8.6.13=noxft_h4845f30_101
   - toolz=0.12.1=pyhd8ed1ab_0
   - tornado=6.4.1=py310hc51659f_0
-  - tqdm=4.66.4=pyhd8ed1ab_0
+  - tqdm=4.66.5=pyhd8ed1ab_0
   - typing-extensions=4.12.2=hd8ed1ab_0
   - typing_extensions=4.12.2=pyha770c72_0
   - tzdata=2024a=h0c530f3_0
   - unicodedata2=15.1.0=py310h2372a71_0
   - urllib3=2.2.2=pyhd8ed1ab_1
-  - wheel=0.43.0=pyhd8ed1ab_1
+  - wheel=0.44.0=pyhd8ed1ab_0
   - xorg-libxau=1.0.11=hd590300_0
   - xorg-libxdmcp=1.1.3=h7f98852_0
   - xz=5.2.6=h166bdaf_0
@@ -145,13 +144,13 @@ dependencies:
   - zstd=1.5.6=ha6fb4c9_0
   - pip:
       - empymod === 2.3.1
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@2bc1ea4dbea2a026ec37eb00180e8ed4423a9f6a
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@f95bdfb2ab74f30b0d0d67abc398370c261d1823
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@32e22d726e8158082e32ce0c2d2a1d7b9fcbce11
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@bb20f9c747fae61c3d0917039fecb7fb1b7e0073
       - llvmlite === 0.43.0
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg@5cf52f6d8d0cd9ccb36ffc26eb3196e9fc37b4d9
       - numba === 0.60.0
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@a88c1e341d173bd26f4f321c47433c6964aa24f4
-      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps@8263b65c79cbc80058bd153f3e8231e73992dccd
+      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps@ec6a4381a2148e941499c006d885e39989055004
       - scooby === 0.10.0
 
 variables:
