--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ scipy = "~1.14.0"
 ## Pip dependencies from Git repositories
 #----------------------------------------
 #geoh5py = {version = "~0.10.0-alpha.1", source = "pypi", allow-prereleases = true}
-geoh5py = {git = "https://github.com/MiraGeoscience/geoh5py.git", rev = "develop"}
+geoh5py = {git = "https://github.com/MiraGeoscience/geoh5py.git", rev = "release/0.10.0"}
 
 #octree-creation-app = {version = "~0.2.0-alpha.1", source = "pypi", allow-prereleases = true}
 octree-creation-app = {git = "https://github.com/MiraGeoscience/octree-creation-app.git", rev = "develop"}
