--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,175 +1,153 @@
-[tool.poetry]
-name = "simpeg-drivers"
-version = "0.2.0-alpha.1"
-description = "Application to run SimPEG inversions with geoh5 files from Geoscience Analyst."
-license = "MIT"
-authors = ["Mira Geoscience <support@mirageoscience.com>"]
-maintainers = [
-    "Benjamin Kary <benjamink@mirageoscience.com>",
-    "Dominique Fournier <dominiquef@mirageoscience.com>",
-]
-repository = "https://github.com/MiraGeoscience/simpeg-drivers"
-documentation = "https://mirageoscience-simpeg-drivers.readthedocs-hosted.com/"
-homepage = "https://www.mirageoscience.com/mining-industry-software/python-integration/"
+[build-system]
+build-backend = 'poetry.core.masonry.api'
+requires = ['poetry-core>=1.0.0', 'setuptools']
 
-packages = [
-     { include = "simpeg_drivers" },
-     { include = "simpeg_drivers-assets" },
-]
-
-include = [
-    { path = "COPYING", format = ["sdist", "wheel"] },
-    { path = "COPYING.LESSER", format = ["sdist", "wheel"] },
-    { path = "LICENSE", format = ["sdist", "wheel"] },
-    { path = "README.rst", format = ["sdist", "wheel"] },
-    { path = "THIRD_PARTY_SOFTWARE.rst", format = ["sdist", "wheel"] },
-    { path = "docs/**/THIRD_PARTY_SOFTWARE.rst", format = ["sdist", "wheel"] },
-]
-
-[tool.poetry.dependencies]
-python = "^3.10, <3.11"  # limited to 3.10 because of geoapps-utils (due to PySide2)
-
-dask = {version = "2024.6.*", extras = ["distributed"]}  # also in simpeg[dask]
-discretize = "~0.10.0"  # also in simpeg, octree-creation-app
-distributed = "2024.6.*"  # because conda-lock doesn't take dask extras into account
-numpy = "~1.26.0" # also in geoh5py, simpeg
-scipy = "~1.14.0"
-
-## Pip dependencies from Git repositories
-#----------------------------------------
-#geoh5py = {version = "~0.10.0-alpha.1", source = "pypi", allow-prereleases = true}
-geoh5py = {git = "https://github.com/MiraGeoscience/geoh5py.git", rev = "release/0.10.0"}
-
-#octree-creation-app = {version = "~0.2.0-alpha.1", source = "pypi", allow-prereleases = true}
-octree-creation-app = {git = "https://github.com/MiraGeoscience/octree-creation-app.git", rev = "develop"}
-
-#geoapps-utils = {version = "~0.4.0-alpha.1", source = "pypi", allow-prereleases = true}
-geoapps-utils = {git = "https://github.com/MiraGeoscience/geoapps-utils.git", rev = "develop"}
-
-#mira-simpeg = {version = ">=0.21.2.1-alpha.1, <0.21.2.2.dev", source = "pypi", allow-prereleases = true}
-mira-simpeg = {git = "https://github.com/MiraGeoscience/simpeg.git", rev = "develop"}
-
-#param-sweeps = {version = "~0.1.8-alpha.1", source = "pypi", allow-prereleases = true}
-param-sweeps = {git = "https://github.com/MiraGeoscience/param-sweeps.git", rev = "develop"}
-
-## about pip dependencies
-# to be specified to work with conda-lock
-# - from PyPI: my_package = { version = "1.2.3", source = "pypi" }
-# - from URL: !!! no actual lock, as tag or branch can move and installation will fetch current !!!
-#   - for a tag:    my_package = { url = "https://github.com/ORGANISATION/REPO/archive/refs/tags/TAG.tar.gz" }
-#   - for a branch: my_package = { url = "https://github.com/ORGANISATION/REPO/archive/refs/heads/BRANCH.tar.gz" }
-# - to actually lock on a revision: my_package = { git = "https://github.com/ORGANISATION/REPO.git", rev = "GIT_REV" }
-#   (where rev value is a tag, a branch name or a commit hash). Can also use ``branch`` or ``tag`` instead of ``rev``
-
-[tool.poetry.group.dev.dependencies]
-Pygments = "*"
-ipywidgets = "^7.6.5"
-jupyter-book = "^0.13"
-jupytext = "^1.14"
-pylint = "*"
-pytest = "*"
-pytest-cov = "*"
-readthedocs-sphinx-ext = "*"
-sphinx = "^5.0"
-tomli = "*"
-nbconvert = "~7.16.4"
-
+[tool]
 [tool.conda-lock]
-platforms = ['win-64', 'linux-64']
 channels = ['conda-forge']
+platforms = ['win-64', 'linux-64']
 
 [tool.conda-lock.dependencies]
-libblas = "*=*mkl"  # because simpeg already brings in the MKL
+empymod = '>=2.2.1, <2.3.0'
+fsspec = '2022.*'
+geoana = '>=0.5.0, <0.6.0'
+h5py = '>=3.2.1, <4.0.0'
+libblas = '*=*mkl'
+matplotlib-base = '>=3.8.4, <3.9.0'
+mkl = '>=2023.2, <2023.3'
+pandas = '>=2.2.1, <2.3.0'
+pillow = '>=10.3.0, <10.4.0'
+pydantic = '>=2.5.2, <3.0.0'
+pydiso = '>=0.0.5, <0.1.0'
+pymatsolver = '>=0.2.0, <0.3.0'
+python-tzdata = '2023.4.*'
+scikit-learn = '>=1.4.0, <1.5.0'
+tbb = '2021.12.*'
+tqdm = '>=4.66.1, <5.0.0'
+zarr = '>=2.14.2, <2.15.0'
 
-## indirect dependencies, forcing them here for installation through Conda not pip
-#---------------------------------------------------------------------------------
-Pillow = ">=10.3.0, <10.4.0"  # from geoh5py
-empymod = ">=2.2.1, <2.3.0"  # from simpeg and geoana
-fsspec = "2022.*"  # from simpeg[dask]
-geoana = ">=0.5.0, <0.6.0"  # from simpeg
-h5py = ">=3.2.1, <4.0.0"  # from geoh5py
-matplotlib-base = ">=3.8.4, <3.9.0"  # from simpeg
-mkl = ">=2023.2, <2023.3"  # from simpeg
-pandas = ">=2.2.1, <2.3.0"  # from SimPEG, also used by targeting-workflow, petro-lingo
-pydantic = ">=2.5.2, <3.0.0"  # from geoh5py, geoapps-utils
-pydiso = ">=0.0.5, <0.1.0"  # from simpeg
-pymatsolver = ">=0.2.0, <0.3.0"  # from simpeg
-scikit-learn = ">=1.4.0, <1.5.0"  # from SimPEG, also used by geo-unsup-mapper, petro-lingo
-tqdm = ">=4.66.1, <5.0.0"  # from simpeg
-zarr = ">=2.14.2, <2.15.0"  # from simpeg[dask]
+[tool.coverage]
+[tool.coverage.html]
+skip_covered = true
+skip_empty = true
 
-# force some versions to resolve incompatible resolution between PyPI and Conda
-#------------------------------------------------------------------------------
-tbb = "2021.12.*"  # through mkl from SimPEG
-python-tzdata = "2023.4.*"  # through pandas from SimPEG
+[tool.coverage.report]
+exclude_lines = ['raise NotImplementedError', 'pass', 'if TYPE_CHECKING', 'pragma: no cover']
+fail_under = 90
+
+[tool.coverage.run]
+branch = true
+source = ['simpeg_drivers']
+
+[tool.mypy]
+check_untyped_defs = true
+ignore_missing_imports = true
+plugins = ['numpy.typing.mypy_plugin']
+scripts_are_modules = true
+show_column_numbers = true
+show_error_context = true
+warn_unused_configs = true
+
+[tool.poetry]
+authors = ['Mira Geoscience <support@mirageoscience.com>']
+description = 'Application to run SimPEG inversions with geoh5 files from Geoscience Analyst.'
+documentation = 'https://mirageoscience-simpeg-drivers.readthedocs-hosted.com/'
+homepage = 'https://www.mirageoscience.com/mining-industry-software/python-integration/'
+license = 'MIT'
+maintainers = ['Benjamin Kary <benjamink@mirageoscience.com>', 'Dominique Fournier <dominiquef@mirageoscience.com>']
+name = 'simpeg-drivers'
+repository = 'https://github.com/MiraGeoscience/simpeg-drivers'
+version = '0.2.0-alpha.1'
+
+[tool.poetry.dependencies]
+discretize = '~0.10.0'
+distributed = '2024.6.*'
+numpy = '~1.26.0'
+python = '^3.10, <3.11'
+scipy = '~1.14.0'
+
+[tool.poetry.dependencies.dask]
+extras = ['distributed']
+version = '2024.6.*'
+
+[tool.poetry.dependencies.geoapps-utils]
+allow-prereleases = true
+version = '>=0.4.0a0.dev0, <0.5.0'
+
+[tool.poetry.dependencies.geoh5py]
+allow-prereleases = true
+version = '>=0.10.0a0.dev0, <0.11.0'
+
+[tool.poetry.dependencies.mira-simpeg]
+allow-prereleases = true
+version = '~0.21.2.1.dev25'
+
+[tool.poetry.dependencies.octree-creation-app]
+allow-prereleases = true
+version = '>=0.2.0a0.dev0, <0.3.0'
+
+[tool.poetry.dependencies.param-sweeps]
+allow-prereleases = true
+version = '>=0.2.0a0.dev0, <0.2.1'
+
+[tool.poetry.group]
+[tool.poetry.group.dev]
+[tool.poetry.group.dev.dependencies]
+ipywidgets = '^7.6.5'
+jupyter-book = '^0.14'
+jupytext = '^1.14'
+nbconvert = '~7.16.4'
+pygments = '*'
+pylint = '*'
+pytest = '*'
+pytest-cov = '*'
+readthedocs-sphinx-ext = '*'
+sphinx = '^5.0'
+tomli = '*'
+
+[[tool.poetry.include]]
+format = ['sdist', 'wheel']
+path = 'COPYING'
+
+[[tool.poetry.include]]
+format = ['sdist', 'wheel']
+path = 'COPYING.LESSER'
+
+[[tool.poetry.include]]
+format = ['sdist', 'wheel']
+path = 'LICENSE'
+
+[[tool.poetry.include]]
+format = ['sdist', 'wheel']
+path = 'README.rst'
+
+[[tool.poetry.include]]
+format = ['sdist', 'wheel']
+path = 'THIRD_PARTY_SOFTWARE.rst'
+
+[[tool.poetry.include]]
+format = ['sdist', 'wheel']
+path = 'docs/**/THIRD_PARTY_SOFTWARE.rst'
+
+[[tool.poetry.packages]]
+include = 'simpeg_drivers'
+
+[[tool.poetry.packages]]
+include = 'simpeg_drivers-assets'
+
+[[tool.poetry.source]]
+name = 'jfrog-server'
+url = 'https://mirageoscienceltd.jfrog.io/artifactory/api/pypi/public-pypi-dev/simple'
 
 [tool.ruff]
-target-version = "py310"
+target-version = 'py310'
 
 [tool.ruff.lint]
-ignore = [
-    "B028",  # no-explicit-stacklevel for warnings.warn()
-    "E501",  # line-too-long - code is reformatted (do not care about comments and docstring)
-    "F401",  # unsused-import - covered by pycln
-    "RUF005",  # collection-literal-concatenation - wrong suggestion with numpy arrays
-    "RUF012", # TODO
-]
-select = [
-    "A",  # flake8-builtins
-    "B",  # flake8-bugbear
-    "B006",  # Do not use mutable data structures for argument defaults
-    "B9",  # flake8-bugbear opiniated warnings
-    "BLE",  # flake8-blind-except
-    "C4",  # flake8-comprehensions
-    "C9",  # mccabe
-    "E",  # pycodestyle errors
-    "F",  # pyflakes
-    "I",  # isort
-    "RUF",  # ruff rules
-    "TID", # flake8-tidy-imports
-    "UP",  # pyupgrade
-    "W",  # pycodestyle warnings
-]
-
-[tool.ruff.lint.mccabe]
-max-complexity = 18
+ignore = ['B028', 'E501', 'F401', 'RUF005', 'RUF012']
+select = ['A', 'B', 'B006', 'B9', 'BLE', 'C4', 'C9', 'E', 'F', 'I', 'RUF', 'TID', 'UP', 'W']
 
 [tool.ruff.lint.isort]
 lines-after-imports = 2
 
-[tool.ruff.format]
-# default formatting is just fine
-
-[tool.mypy]
-warn_unused_configs = true
-ignore_missing_imports = true
-scripts_are_modules = true
-show_error_context = true
-show_column_numbers = true
-check_untyped_defs = true
-
-plugins = [
-    "numpy.typing.mypy_plugin",
-]
-
-[tool.coverage.run]
-branch = true
-source = ["simpeg_drivers"]
-
-[tool.coverage.report]
-exclude_lines = [
-    "raise NotImplementedError",
-    "pass",
-    "if TYPE_CHECKING",
-    "pragma: no cover"
-]
-
-fail_under = 90
-
-[tool.coverage.html]
-skip_empty = true
-skip_covered = true
-
-[build-system]
-requires = ["poetry-core>=1.0.0", "setuptools"]
-build-backend = "poetry.core.masonry.api"
+[tool.ruff.lint.mccabe]
+max-complexity = 18
