--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -73,6 +73,7 @@ repos:
         exclude_types: [jupyter]
     -   id: check-toml
     -   id: check-yaml
+        exclude: ^meta.yaml$
 #    -   id: check-added-large-files # crashing on some configuration. To be investigated
     -   id: check-case-conflict
     -   id: check-merge-conflict
