--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ geoapps-utils = {git = "https://github.com/MiraGeoscience/geoapps-utils.git", re
 mira-simpeg = {git = "https://github.com/MiraGeoscience/simpeg.git", rev = "develop"}
 
 #param-sweeps = {version = "~0.1.8-alpha.1", source = "pypi", allow-prereleases = true}
-param-sweeps = {git = "https://github.com/MiraGeoscience/param-sweeps.git", rev = "develop"}
+param-sweeps = {git = "https://github.com/MiraGeoscience/param-sweeps.git", rev = "release/0.2.0"}
 
 ## about pip dependencies
 # to be specified to work with conda-lock
