--- a/meta.yaml
+++ b/meta.yaml
@@ -46,7 +46,7 @@ requirements:
     - zarr >=2.14.2,<2.15.0
   run_constrained:
     - tbb 2021.12.*
-    - tzdata 2023.4.*
+    - python-tzdata 2023.4.*
 
 test:
   imports:
