--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,9 @@ mira-simpeg = {git = "https://github.com/MiraGeoscience/simpeg.git", rev = "deve
 #param-sweeps = {version = "~0.1.8-alpha.1", source = "pypi", allow-prereleases = true}
 param-sweeps = {git = "https://github.com/MiraGeoscience/param-sweeps.git", rev = "develop"}
 #param-sweeps = {version = "~0.1.8-alpha.1", allow-prereleases = true}
+## force some versions to resolve incompatible resolution between PyPI and Conda
+#-------------------------------------------------------------------------------
+pymatsolver = {version = "~0.2.0", source = "pypi"}
 
 ## about pip dependencies
 # to be specified to work with conda-lock
@@ -90,10 +93,6 @@ channels = ['conda-forge']
 [tool.conda-lock.dependencies]
 libblas = "*=*mkl"  # because simpeg already brings in the MKL
 
-# force some versions to resolve incompatible resolution between PyPI and Conda
-#-------------------------------------------------------------------------------
-pymatsolver = { version = ">=0.2.0, <0.3.0", source = "pypi" }
-
 ## indirect dependencies, forcing them here for installation through Conda not pip
 #---------------------------------------------------------------------------------
 Pillow = ">=10.3.0, <10.4.0"  # from geoh5py
@@ -106,6 +105,7 @@ mkl = "2023.2, <2024.1"  # from simpeg
 pandas = ">=2.2.1, <2.3.0"  # from SimPEG, also used by targeting-workflow, petro-lingo
 pydantic = ">=2.5.2, <3.0.0"  # from geoh5py, geoapps-utils
 pydiso = ">=0.1.0, <0.2.0"  # from simpeg
+pymatsolver = ">=0.2.0, <0.3.0"  # from simpeg
 scikit-learn = ">=1.4.0, <1.5.0"  # from SimPEG, also used by geo-unsup-mapper, petro-lingo
 tqdm = ">=4.66.1, <5.0.0"  # from simpeg
 zarr = ">=2.14.2, <2.15.0"  # from simpeg[dask]
